--- a/src/bedrock_usage_analyzer/metadata/fm-list-ap-southeast-3.yml
+++ b/src/bedrock_usage_analyzer/metadata/fm-list-ap-southeast-3.yml
@@ -49,12 +49,10 @@ models:
   - ON_DEMAND
   model_id: amazon.nova-lite-v1:0
   provider: Amazon
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: amazon.nova-lite-v1:0:24k
   provider: Amazon
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: amazon.nova-lite-v1:0:300k
   provider: Amazon
 - endpoints:
@@ -74,12 +72,10 @@ models:
   - INFERENCE_PROFILE
   model_id: amazon.nova-micro-v1:0
   provider: Amazon
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: amazon.nova-micro-v1:0:128k
   provider: Amazon
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: amazon.nova-micro-v1:0:24k
   provider: Amazon
 - endpoints:
@@ -110,12 +106,10 @@ models:
   - ON_DEMAND
   model_id: amazon.nova-pro-v1:0
   provider: Amazon
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: amazon.nova-pro-v1:0:24k
   provider: Amazon
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: amazon.nova-pro-v1:0:300k
   provider: Amazon
 - endpoints:
