--- a/src/bedrock_usage_analyzer/metadata/fm-list-us-west-2.yml
+++ b/src/bedrock_usage_analyzer/metadata/fm-list-us-west-2.yml
@@ -105,20 +105,16 @@ models:
   - INFERENCE_PROFILE
   model_id: amazon.nova-premier-v1:0
   provider: Amazon
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: amazon.nova-premier-v1:0:1000k
   provider: Amazon
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: amazon.nova-premier-v1:0:20k
   provider: Amazon
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: amazon.nova-premier-v1:0:8k
   provider: Amazon
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: amazon.nova-premier-v1:0:mm
   provider: Amazon
 - endpoints:
@@ -185,8 +181,7 @@ models:
   - ON_DEMAND
   model_id: amazon.titan-embed-image-v1
   provider: Amazon
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: amazon.titan-embed-image-v1:0
   provider: Amazon
@@ -207,8 +202,7 @@ models:
   - ON_DEMAND
   model_id: amazon.titan-embed-text-v1
   provider: Amazon
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: amazon.titan-embed-text-v1:2:8k
   provider: Amazon
@@ -327,18 +321,15 @@ models:
   - INFERENCE_PROFILE
   model_id: anthropic.claude-3-5-sonnet-20240620-v1:0
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-3-5-sonnet-20240620-v1:0:18k
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-3-5-sonnet-20240620-v1:0:200k
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-3-5-sonnet-20240620-v1:0:51k
   provider: Anthropic
@@ -373,18 +364,15 @@ models:
   - ON_DEMAND
   model_id: anthropic.claude-3-5-sonnet-20241022-v2:0
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-3-5-sonnet-20241022-v2:0:18k
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-3-5-sonnet-20241022-v2:0:200k
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-3-5-sonnet-20241022-v2:0:51k
   provider: Anthropic
@@ -441,13 +429,11 @@ models:
   - ON_DEMAND
   model_id: anthropic.claude-3-haiku-20240307-v1:0
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-3-haiku-20240307-v1:0:200k
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-3-haiku-20240307-v1:0:48k
   provider: Anthropic
@@ -485,16 +471,13 @@ models:
   - ON_DEMAND
   model_id: anthropic.claude-3-opus-20240229-v1:0
   provider: Anthropic
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: anthropic.claude-3-opus-20240229-v1:0:12k
   provider: Anthropic
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: anthropic.claude-3-opus-20240229-v1:0:200k
   provider: Anthropic
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: anthropic.claude-3-opus-20240229-v1:0:28k
   provider: Anthropic
 - endpoints:
@@ -528,13 +511,11 @@ models:
   - ON_DEMAND
   model_id: anthropic.claude-3-sonnet-20240229-v1:0
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-3-sonnet-20240229-v1:0:200k
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-3-sonnet-20240229-v1:0:28k
   provider: Anthropic
@@ -576,8 +557,7 @@ models:
   - INFERENCE_PROFILE
   model_id: anthropic.claude-haiku-4-5-20251001-v1:0
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-instant-v1:2:100k
   provider: Anthropic
@@ -739,23 +719,19 @@ models:
   - INFERENCE_PROFILE
   model_id: anthropic.claude-sonnet-4-5-20250929-v1:0
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-v2:0:100k
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-v2:0:18k
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-v2:1:18k
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-v2:1:200k
   provider: Anthropic
@@ -794,19 +770,14 @@ models:
     base:
       quotas:
         concurrent: null
-        rpm:
-          code: L-FF8E7864
-          name: On-demand model inference requests per minute for Cohere Embed English
+        rpm: null
         tpd: null
-        tpm:
-          code: L-A2BE277A
-          name: On-demand model inference tokens per minute for Cohere Embed English
+        tpm: null
   inference_types:
   - ON_DEMAND
   model_id: cohere.embed-english-v3
   provider: Cohere
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: cohere.embed-english-v3:0:512
   provider: Cohere
@@ -821,8 +792,7 @@ models:
   - ON_DEMAND
   model_id: cohere.embed-multilingual-v3
   provider: Cohere
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: cohere.embed-multilingual-v3:0:512
   provider: Cohere
@@ -1018,8 +988,7 @@ models:
   - INFERENCE_PROFILE
   model_id: meta.llama3-1-70b-instruct-v1:0
   provider: Meta
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: meta.llama3-1-70b-instruct-v1:0:128k
   provider: Meta
@@ -1055,8 +1024,7 @@ models:
   - INFERENCE_PROFILE
   model_id: meta.llama3-1-8b-instruct-v1:0
   provider: Meta
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: meta.llama3-1-8b-instruct-v1:0:128k
   provider: Meta
@@ -1073,8 +1041,7 @@ models:
   - INFERENCE_PROFILE
   model_id: meta.llama3-2-11b-instruct-v1:0
   provider: Meta
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: meta.llama3-2-11b-instruct-v1:0:128k
   provider: Meta
@@ -1097,8 +1064,7 @@ models:
   - INFERENCE_PROFILE
   model_id: meta.llama3-2-1b-instruct-v1:0
   provider: Meta
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: meta.llama3-2-1b-instruct-v1:0:128k
   provider: Meta
@@ -1121,8 +1087,7 @@ models:
   - INFERENCE_PROFILE
   model_id: meta.llama3-2-3b-instruct-v1:0
   provider: Meta
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: meta.llama3-2-3b-instruct-v1:0:128k
   provider: Meta
@@ -1139,8 +1104,7 @@ models:
   - INFERENCE_PROFILE
   model_id: meta.llama3-2-90b-instruct-v1:0
   provider: Meta
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: meta.llama3-2-90b-instruct-v1:0:128k
   provider: Meta
@@ -1163,8 +1127,7 @@ models:
   - INFERENCE_PROFILE
   model_id: meta.llama3-3-70b-instruct-v1:0
   provider: Meta
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: meta.llama3-3-70b-instruct-v1:0:128k
   provider: Meta
 - endpoints:
