--- a/src/bedrock_usage_analyzer/metadata/fm-list-ap-south-2.yml
+++ b/src/bedrock_usage_analyzer/metadata/fm-list-ap-south-2.yml
@@ -16,8 +16,7 @@ models:
   - ON_DEMAND
   model_id: amazon.titan-embed-text-v2:0
   provider: Amazon
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: amazon.titan-embed-text-v2:0:8k
   provider: Amazon
 - endpoints:
