--- a/src/bedrock_usage_analyzer/metadata/fm-list-ap-southeast-2.yml
+++ b/src/bedrock_usage_analyzer/metadata/fm-list-ap-southeast-2.yml
@@ -122,8 +122,7 @@ models:
   - ON_DEMAND
   model_id: amazon.titan-embed-image-v1
   provider: Amazon
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: amazon.titan-embed-image-v1:0
   provider: Amazon
@@ -248,13 +247,11 @@ models:
   - ON_DEMAND
   model_id: anthropic.claude-3-haiku-20240307-v1:0
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-3-haiku-20240307-v1:0:200k
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-3-haiku-20240307-v1:0:48k
   provider: Anthropic
@@ -289,13 +286,11 @@ models:
   - ON_DEMAND
   model_id: anthropic.claude-3-sonnet-20240229-v1:0
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-3-sonnet-20240229-v1:0:200k
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-3-sonnet-20240229-v1:0:28k
   provider: Anthropic
@@ -423,13 +418,9 @@ models:
     base:
       quotas:
         concurrent: null
-        rpm:
-          code: L-FF8E7864
-          name: On-demand model inference requests per minute for Cohere Embed English
+        rpm: null
         tpd: null
-        tpm:
-          code: L-A2BE277A
-          name: On-demand model inference tokens per minute for Cohere Embed English
+        tpm: null
   inference_types:
   - ON_DEMAND
   model_id: cohere.embed-english-v3
