--- a/src/bedrock_usage_analyzer/metadata/fm-list-eu-central-1.yml
+++ b/src/bedrock_usage_analyzer/metadata/fm-list-eu-central-1.yml
@@ -117,8 +117,7 @@ models:
   - ON_DEMAND
   model_id: amazon.titan-embed-image-v1
   provider: Amazon
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: amazon.titan-embed-image-v1:0
   provider: Amazon
@@ -139,8 +138,7 @@ models:
   - ON_DEMAND
   model_id: amazon.titan-embed-text-v1
   provider: Amazon
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: amazon.titan-embed-text-v1:2:8k
   provider: Amazon
 - endpoints:
@@ -414,13 +412,11 @@ models:
   - INFERENCE_PROFILE
   model_id: anthropic.claude-sonnet-4-5-20250929-v1:0
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-v2:1:18k
   provider: Anthropic
-- endpoints: {}
-  inference_types:
+- inference_types:
   - PROVISIONED
   model_id: anthropic.claude-v2:1:200k
   provider: Anthropic
@@ -428,13 +424,9 @@ models:
     base:
       quotas:
         concurrent: null
-        rpm:
-          code: L-FF8E7864
-          name: On-demand model inference requests per minute for Cohere Embed English
+        rpm: null
         tpd: null
-        tpm:
-          code: L-A2BE277A
-          name: On-demand model inference tokens per minute for Cohere Embed English
+        tpm: null
   inference_types:
   - ON_DEMAND
   model_id: cohere.embed-english-v3
