--- a/src/bedrock_usage_analyzer/metadata/fm-list-us-east-2.yml
+++ b/src/bedrock_usage_analyzer/metadata/fm-list-us-east-2.yml
@@ -92,20 +92,16 @@ models:
   - INFERENCE_PROFILE
   model_id: amazon.nova-premier-v1:0
   provider: Amazon
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: amazon.nova-premier-v1:0:1000k
   provider: Amazon
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: amazon.nova-premier-v1:0:20k
   provider: Amazon
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: amazon.nova-premier-v1:0:8k
   provider: Amazon
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: amazon.nova-premier-v1:0:mm
   provider: Amazon
 - endpoints:
@@ -240,8 +236,7 @@ models:
   - INFERENCE_PROFILE
   model_id: anthropic.claude-3-haiku-20240307-v1:0
   provider: Anthropic
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: anthropic.claude-3-haiku-20240307-v1:0:200k
   provider: Anthropic
 - endpoints:
@@ -595,8 +590,7 @@ models:
   - INFERENCE_PROFILE
   model_id: meta.llama3-1-70b-instruct-v1:0
   provider: Meta
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: meta.llama3-1-70b-instruct-v1:0:128k
   provider: Meta
 - endpoints:
@@ -618,8 +612,7 @@ models:
   - INFERENCE_PROFILE
   model_id: meta.llama3-1-8b-instruct-v1:0
   provider: Meta
-- endpoints: {}
-  inference_types: []
+- inference_types: []
   model_id: meta.llama3-1-8b-instruct-v1:0:128k
   provider: Meta
 - endpoints:
