updated metadata quota mapping

--- a/src/bedrock_usage_analyzer/metadata/fm-list-eu-west-2.yml
+++ b/src/bedrock_usage_analyzer/metadata/fm-list-eu-west-2.yml
@@ -164,9 +164,9 @@ models:
           name: Cross-region model inference requests per minute for Anthropic Claude
             Haiku 4.5
         tpd:
-          code: L-B5C049AE
-          name: Global cross-region model inference tokens per day for Anthropic Claude
-            Haiku 4.5
+          code: L-6120CF2D
+          name: Model invocation max tokens per day for Anthropic Claude Haiku 4.5
+            (doubled for cross-region calls)
         tpm:
           code: L-58BE175A
           name: Cross-region model inference tokens per minute for Anthropic Claude
